# MAPLE

./: .gitignore  .gitmodules  README.md  all_boulder_detections_saved.npy  battery_evaluator.sh  battery_evaluator2.sh  battery_evaluator_simple.sh  battery_plot.py  charging_results2.csv  charging_results2_og.csv  coordinates.txt  data_output.csv  explore_dataset.py  generate_coordinates.py  geometry.py  gt_rock_data_saved.npy  launch_orbslam_recorder.sh  pyproject.toml  quick_data_analysis.py  stationary_turn_plot.py  surface_testing.ipynb  test.py  utils.py
agents/: agent001.py  agent003.py  agent004.py  agent005.py  agent006.py  agent007.py  agent008.py  agent009.py  agent009_2.py  agent_v326.py  apriltag_test_agent.py  baseline_agent.py  batterytest_agent.py  beaver_1.py  beaver_2.py  beaver_3.py  beaver_4.py  beaver_5.py  beaver_7.py  beaver_8.py  beaver_9.py  boulder_test_agent.py  charge_bs_tester.py  charging_agent.py  charging_agent_driveby.py  data_collection.py  deadreckoning_agent.py  dev.py  example_recorder_agent.py  global_loc_agent.py  human_agent.py  imu_testing.py  integrated_agent.py  integrated_agent_bare.py  integrated_agent_qualifier_testing.py  integrated_agent_surfacepoint_testing.py  mit_agent.py  nav_tester.py  nav_tester_dont_change.py  orbslam_agent.py  (+14 more)
agents/testing_agents/: README.md  battery_charge_agent.py  nav_tester.py
data/036/plots/depth_maps/: depth_data_0060.csv  depth_data_0080.csv  depth_data_0260.csv  depth_data_0280.csv  depth_data_0460.csv  depth_data_0480.csv
data/042/point_cloud/: point_cloud_data.csv
data/043/point_cloud/: point_cloud_data.csv
data/045/point_cloud/: point_cloud_data.csv
data/046/point_cloud/: point_cloud_data.csv
docker/: Dockerfile
leaderboard/: leaderboard_evaluator.py  pyproject.toml
leaderboard/leaderboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
leaderboard/leaderboard/missionmanager/: mission_spawner.py
maple/: data_output.csv  geometry.py  stuck.py  temp_dataloader.py  utils.py  visualize.py
maple/agents/: dummy_agent.py  naive_tag_agent.py  spiral_agent.py
maple/agents/pose/: apriltag.py
maple/boulder/: __init__.py  boulder_plotter.py  boulder_visualize.py  detector.py  detector_old.py  export_mask_data.py  export_mask_data_final.py  fastSAM_playback.py  map.py  mapper.py  test_agent.py  test_detections.py  visualize_fastsam_segmentation.py
maple/data/: __init__.py  notes.md  recorder.py
maple/navigation/: README.md  __init__.py  charging_bs.py  charging_navigator.py  charging_navigator_driveby.py  charging_navigator_straightshot.py  charging_navigator_straightshot_old.py  constants.py  drive_control.py  global_path.py  local_path.py  navigator.py  navigator.py.old  navigator_luke_new.py  path.py  path_viewer.py  rrt.py  rrt_path.py  rrt_path_luke_new.py  save_transforms.py  setup.sh  simple_charge_nav.py  simple_spiral.py  static_path_planning.py  utils.py  visualization.py
maple/navigation/helper_code/: README.md  display_graph.py  drive_control_sim.py  path_viewer.py  rrt_modify_path_from_obstacle.py
maple/navigation/state/: dynamic.py  path.py  static.py
maple/pose/: ORBSLAM_Interface.py  VO_test.py  __init__.py  apriltag.py  doubleslam.py  estimator.py  graph.py  imu.py  imu_Estimator.py  inertial.py  inertial_angle.py  inertial_apriltag.py  inertial_apriltag.py.kalman  kalman.py  orbslam.py  orbslam_test.py  orbslam_test2.py  orbslam_test3.py  orbslam_utils.py  plot_traj.py  pose_estimator.py  stereoslam.py  vio.py  visual_odometer.py
maple/pose/sample_params/: camera_params.yaml  imu_params.yaml  initialization_params.yaml  pipeline_params.yaml  tracker_params.yaml
maple/surface/: __init__.py  map.py  post_processing.py  surface_height.py  surface_testing.ipynb  surface_testing.py
maple/surface/interpolation/: README.md  interpolation_testing.py  interpolation_testing_fixedspiral_estimatedboundary.py  interpolation_testing_rover_data.py  surface_interpolation.py
maple/surface/test_data/: output_sample_list.csv
maple/utils/: dataloader.py  debug.py
navigation/deep-q-learning/: grond_noise_test.py  requirements.txt  train.py
navigation/deep-q-learning/config/: custom.yml
navigation/deep-q-learning/src/: deep_q_network.py  map_generator.py  tetris.py
navigation/q-learning/: README.md  custom_env.py  record.py  requirements.txt  utils.py
pose/: apriltag.py  imu_Estimator.py
resources/: LAC_cam.yaml  orbslam_config.yaml
scripts/: build_docker.py  fastsam_checkpoint.py  gifmaker.py  run_agent.py  run_both.py
test/: data_parser.py  mock_agent.py  mock_carla_transform.py  test_apriltags.py  test_example.py  test_imu_Estimator.py  test_utils.py
test/mocks/: __init__.py  mock_agent.py  mock_geometric_map.py
test/playback/: __init__.py  core.py  playback_agent.py
test/test_boulder/: test_boulder.py  test_detector.py  test_map.py
test/test_pathing/: test_PID.py  test_mini_sim.py  test_navigation_heirachy.py  test_navigator.py  test_pure_pursuit.py
test/test_pose/: test_apriltag.py  test_inertial.py
test/test_pose/test_apriltag/: ground_truth_99.json  test_apriltag.py
test/test_pose/test_graph/: test_graph.py  test_node.py
test/test_pose/test_orbslam/: double.py  stereo.py  test_orbslam.py
test/test_surface/: example_height_map.py  test_map.py  test_post_processing.py  test_surface_height.py
typings/carla/0.9.15/: command.pyi
