[project]
name = "MAPLE"
version = "0.1.0"
description = "MIT Autonomous Pathfinding for Lunar Exploration"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = "==3.10.15"
authors = [
    { name = "Annika Thomas", email = "annikat@mit.edu" },
    { name = "Aleksander Garbuz", email = "agarbuz@mit.edu" },
    { name = "Allison Eto", email = "allisone@mit.edu" },
    { name = "Cormac O'Neil", email = "croneill@mit.edu" },
    { name = "Dami Thomas", email = "dvthomas@mit.edu" },
    { name = "Jing Tan", email = "jingt630@mit.edu" },
    { name = "Luke Anger", email = "langer1@mit.edu.com" },
    { name = "Robaire Galliath", email = "robaire@mit.edu" },
    { name = "Trevor Jost", email = "trejohst@mit.edu" },
]
dependencies = ["numpy==1.21.4", "pyapriltags>=3.3.0.3"]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "ruff>=0.7.4",
    "pytest>=8.3.3",
    "pyfakefs>=5.7.1",
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=2.5.0",
    "coverage[toml]>=7.6.7",
    "pytest-cov>=6.0.0",
    "pillow>=11.0.0",
]

[tool.uv.workspace]
members = ["leaderboard"]

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = "."
testpaths = ["test"]
addopts = ["--import-mode=importlib", "--cov", "--cov-report=term-missing"]

[tool.coverage]
run.branch = true
run.source = ["maple", "test"]
html.directory = "coverage"

[tool.setuptools]
packages = ["maple"]
