[project]
name = "leaderboard"
version = "0.1.0"
description = "Lunar Autonomy Challenge Leaderboard"
requires-python = "==3.10.15"
dependencies = [
   "dictor==0.1.12",
   "numpy==1.21.4",
   "tabulate==0.9.0",
   "astropy==5.2.2",
   "lunarsky==0.2.1",
   "pygame==2.5.2",
   "matplotlib==3.7.5",
   "opencv-python==4.10.0.84",
   "pynput==1.7.7",
   "carla==0.9.15",
]

[tool.uv.sources]
carla = { path = "carla-0.9.15-cp310-cp310-manylinux_2_27_x86_64.whl" }

[tool.setuptools]
packages = ["leaderboard"]
